fix: add image height to prevent layout shift

--- a/src/Store/ItemDetails.css
+++ b/src/Store/ItemDetails.css
@@ -28,11 +28,20 @@
   margin-top: 10px;
 }
 
+.image-container {
+  position: relative;
+  padding-bottom: 100%;
+  height: 0;
+  overflow: hidden;
+}
+
 .item-details-image {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  text-align: center;
+  height: 100%;
   display: block;
-  margin: auto;
 }
 
 .ItemDetails .pickers {
